# backend/StockManager/StockManager/Controllers/TransactionController.cs
@@ -56,5 +56,13 @@ namespace StockManager.Controllers
             await transactionService.DeleteAsync(id);
             return Ok();
         }
+
+        [HttpGet]
+        [ProducesResponseType<TradeSummaryDto>(StatusCodes.Status200OK)]
+        public async Task<ActionResult<TradeSummaryDto>> GetTransactionsSummary()
+        {
+            var result = await transactionService.GetTransactionsSummary(_userId);
+            return Ok(result);
+        }
     }
 }
